<?xml version="1.0"?>
<package>
  <name>priovr</name>
  <version>0.0.0</version>
  <description>The priovr package</description>

  <maintainer email="thomasesch@todo.todo">thomasesch</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>r2_gazebo</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>r2_gazebo</run_depend>

</package>
