<?xml version="1.0"?>
<package>
  <name>priovr</name>
  <version>0.1.0</version>
  <description>The priovr package</description>

  <maintainer email="tjudsonesch@gmail.com">tjesch</maintainer>
  <maintainer email="fsuarez6@gmail.com">fsuarez6</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>r2_gazebo</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>nao_description</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>r2_gazebo</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>tf</run_depend>

</package>
