<?xml version="1.0"?>
<package>
  <name>priovr_description</name>
  <version>0.1.0</version>
  <description>The priovr_description package</description>

  <maintainer email="tjudsonesch@gmail.com">tjesch</maintainer>
  <maintainer email="fsuarez6@gmail.com">fsuarez6</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>tf</run_depend>

</package>
