<?xml version="1.0"?>
<package>
  <name>priovr_msgs</name>
  <version>0.1.0</version>
  <description>The priovr_msgs package</description>

  <maintainer email="tjudsonesch@gmail.com">tjesch</maintainer>
  <maintainer email="fsuarez6@gmail.com">fsuarez6</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
